# memo

./: .gitignore  .pre-commit-config.yaml  FINAL_PLAN.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: augmentation.yaml  default.yaml
docs/: architecture.md  data_setup.md  getting_started.md  math.md
scripts/: download_data.py
src/memo/: __init__.py  cli.py  config.py  export.py  fusion.py  labels.py  logging.py  losses.py  pipeline.py  seed.py  types.py
src/memo/augment/: __init__.py  audio.py  image.py  text.py
src/memo/encoders/: __init__.py  audio.py  base.py  image.py  text.py
src/memo/eval/: __init__.py  benchmark.py  evaluate.py  metrics.py  robustness.py
src/memo/preprocessing/: __init__.py  audio.py  face.py  text.py
src/memo/training/: __init__.py  calibrate_fusion.py  datasets.py  distill.py  kfold.py  manifest.py  modality_dropout.py  samplers.py  train_audio.py  train_image.py  train_joint.py  train_text.py  trainer.py
tests/: conftest.py  test_augment.py  test_benchmark.py  test_calibration.py  test_cli.py  test_distill.py  test_encoders.py  test_eval.py  test_export.py  test_fusion.py  test_lora.py  test_losses.py  test_manifest.py  test_metrics.py  test_modality_dropout.py  test_pipeline.py  test_preprocessing.py  test_ravdess_aligned.py  test_samplers.py  test_smoke.py  test_train_commands.py  test_train_joint.py  test_trainer.py
